<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lottie_autoPlay="true"
            app:lottie_fileName="gifintro.json"
            app:lottie_loop="true" />

        <ImageView
            android:id="@+id/gif"
            android:layout_width="305dp"
            android:layout_height="111dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/header"
            android:src="@drawable/remove" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="70dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="#6e7499"
            android:textSize="20sp"
            android:textStyle="normal"
            app:autoSizeTextType="uniform"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/btnmain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/btnmain"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/CONTINUE"
            android:textAllCaps="true"
            android:textSize="16sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>